[package]
name = "addmeta"
version = "0.1.0"
description = "Add Metadata to a Program-Owned Token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "addmeta"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = { version  = "0.25.0" }
mpl-token-metadata = { version = "1.3.2", features = [ "no-entrypoint" ] }
solana-program = { version = "1.9.29" }
borsh = { version = "0.9", features = ["const-generics"] }